<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">
    
	<RelativeLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="1.0"
	    tools:context=".MainActivity"
	    android:focusable="true"
        android:focusableInTouchMode="true"  >
	    
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/demo_string" />
	    
	    <TextView
	        android:id="@+id/keyLabel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textView1"
	        android:layout_alignLeft="@id/textView1"
	        android:layout_marginTop="16dp"
	        android:text="@string/key_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/keyField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/keyLabel"
	        android:layout_alignLeft="@id/textView1"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:inputType="text" />
	    
	    <TextView
            android:id="@+id/inputLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/keyField"
            android:layout_alignLeft="@id/textView1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/input_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	
	    <EditText
	        android:id="@+id/inputField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/inputLabel"
	        android:layout_alignLeft="@+id/keyField"
	        android:inputType="text"
	        android:imeOptions="actionDone"
	        android:ems="10" />  
	    
	    <Button
	        android:id="@+id/encryptButton"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/textView1"
	        android:layout_below="@id/inputField"
	        android:layout_marginTop="16dp"
	        android:layout_centerVertical="true"
	        android:text="@string/encrypt_button_text" />
	    
	    <Button
            android:id="@+id/decryptButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputField"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/encryptButton"
            android:layout_marginLeft="14dp"
            android:text="@string/decrypy_button_text" />
	   
	    <TextView
	        android:id="@+id/ouputLabel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/textView1"
	        android:layout_below="@id/encryptButton"
	        android:layout_marginTop="12dp"
	        android:text="@string/output_text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textIsSelectable="true"/>
	
	</RelativeLayout>
</ScrollView>
